--- a/skillmatch/templates/authentication_app/index.html
+++ b/skillmatch/templates/authentication_app/index.html
@@ -13,7 +13,7 @@
             <!-- Electrician -->
             <div class="category-card">
                 <i class="fa-solid fa-bolt"></i>
-                <h3>Electrician</h3>
+                <h3><a href="{% url 'electrician' %}">Electrician</a></h3>
                 <p>Connect with skilled electricians for your home or business needs.</p>
             </div>
         
