new job seeker user added

--- a/skillmatch/templates/authentication_app/who_are_you.html
+++ b/skillmatch/templates/authentication_app/who_are_you.html
@@ -106,7 +106,7 @@
     <!-- Welcome Section -->
     <div class="container">
         <h2>Who Are You?</h2>
-        <button onclick="window.location.href='{% url 'home' %}'">Job Seeker</button>
+        <button onclick="window.location.href='{% url 'signup_job_seeker' %}'">Job Seeker</button>
         <button onclick="window.location.href='{% url 'login' %}'">Job Provider</button>
     </div>
 
