--- a/skillmatch/templates/authentication_app/sign_up_job_seeker.html
+++ b/skillmatch/templates/authentication_app/sign_up_job_seeker.html
@@ -122,8 +122,21 @@
             {% csrf_token %}
             <input type="text" name="first_name" placeholder="Your Full Name" value="{{first_name}}" required>
             <input type="email" name="email" placeholder="Enter your email" value="{{email}}" required>
+            <select name="job_role">
+                <option value="Electrician">Electrician</option>
+                <option value="Plumber">Plumber</option>
+                <option value="AC service">AC service</option>
+                <option value="Home deep cleaning">Home deep cleaning</option>
+                <option value="Dog walker">Dog walker</option>
+                <option value="Driver">Driver</option>
+            </select>
+            <input type="text" name="phone" placeholder="Enter your phone number" value="{{phone}}" required>
+            <input type="text" name="availability" placeholder="Enter your available time" value="{{availability}}" required>
+            <input type="text" name="area" placeholder="Enter your area" value="{{area}}" required>
+            <input type="file" name="profile" required>
             <input type="password" name="password" placeholder="Create a password" required>
             <input type="password" name="confirm_password" placeholder="Confirm password" required>
+            <input type="hidden" name="is_job_seeker" value="True">
             <button type="submit">Sign Up</button>
         </form>
         <div style="display: flex;width: 400px;justify-content: space-evenly;">
